--- a/performance_monitor_backend/.env.example
+++ b/performance_monitor_backend/.env.example
@@ -13,3 +13,9 @@ METRICS_SAMPLING_INTERVAL_SEC=5
 
 # Retention window for metrics samples. Default: 7 days
 METRICS_RETENTION_DAYS=7
+
+# Recommendations engine defaults
+# Default retention window (days) for TTL recommendations when a specific policy isn't known. Default: 14
+RECS_DEFAULT_TTL_DAYS=14
+# Max recommendations returned by GET /api/recommendations. Default: 50
+RECS_MAX_RETURN=50
