--- a/performance_monitor_backend/.env.example
+++ b/performance_monitor_backend/.env.example
@@ -1,21 +1,20 @@
-# Backend configuration for MongoDB Performance Monitor API
-#
-# NOTE:
-# - BACKEND_MONGO_URI can be auto-detected from the mongodb_instance container's db_connection.txt
-#   if the backend can read it from the workspace path. If not readable, set it explicitly here.
-# - Do NOT commit real credentials to git; use your deployment environment's secret manager.
+# MongoDB URI for the backend's own storage (perfmon DB).
+# If running in Kavia multi-container workspace, backend may auto-read mongodb_instance/db_connection.txt.
+BACKEND_MONGO_URI=mongodb://localhost:27017
 
-# Connection URI for the application's own MongoDB database (stores instances, metrics, alerts, etc.)
-BACKEND_MONGO_URI=mongodb://user:pass@host:27017/?authSource=admin
-
-# Background sampler interval (seconds). Default: 5
+# Metrics sampler
 METRICS_SAMPLING_INTERVAL_SEC=5
-
-# Retention window for metrics samples. Default: 7 days
 METRICS_RETENTION_DAYS=7
 
-# Recommendations engine defaults
-# Default retention window (days) for TTL recommendations when a specific policy isn't known. Default: 14
+# Alerts engine
+# How often to evaluate alert rules against stored samples.
+ALERT_EVAL_INTERVAL_SEC=5
+# Minimum seconds between state-change events per (ruleId, instanceId) to reduce noise.
+ALERT_EVENT_COOLDOWN_SEC=60
+
+# Recommendations engine tuning
 RECS_DEFAULT_TTL_DAYS=14
-# Max recommendations returned by GET /api/recommendations. Default: 50
 RECS_MAX_RETURN=50
+
+# Frontend CORS origin (optional)
+REACT_APP_FRONTEND_URL=http://localhost:3000
