--- a/performance_monitor_backend/.env.example
+++ b/performance_monitor_backend/.env.example
@@ -1,20 +1,33 @@
-# MongoDB URI for the backend's own storage (perfmon DB).
-# If running in Kavia multi-container workspace, backend may auto-read mongodb_instance/db_connection.txt.
+# --- MongoDB connection (backend storage: perfmon DB) ---
+# Preferred (Kavia multi-container): backend auto-reads mongodb_instance/db_connection.txt when present.
+# This resolves the internal mongod port correctly even if Preview exposes a different external port.
+#
+# Fallback: set BACKEND_MONGO_URI explicitly.
 BACKEND_MONGO_URI=mongodb://localhost:27017
 
-# Metrics sampler
+# Diagnostics / docs:
+# - GET /api/health/mongo returns which URI source/path was used, and whether ping succeeded.
+
+# --- Backend <-> Frontend integration ---
+# Standardized frontend origin for CORS.
+# (Legacy: REACT_APP_FRONTEND_URL is still supported.)
+FRONTEND_URL=http://localhost:3000
+REACT_APP_FRONTEND_URL=http://localhost:3000
+
+# Optional: additional allowed origins (comma-separated), e.g. preview URL(s)
+# CORS_ALLOW_ORIGINS=https://<your-preview-host>
+CORS_ALLOW_ORIGINS=
+
+# --- Metrics sampler ---
 METRICS_SAMPLING_INTERVAL_SEC=5
 METRICS_RETENTION_DAYS=7
 
-# Alerts engine
+# --- Alerts engine ---
 # How often to evaluate alert rules against stored samples.
 ALERT_EVAL_INTERVAL_SEC=5
 # Minimum seconds between state-change events per (ruleId, instanceId) to reduce noise.
 ALERT_EVENT_COOLDOWN_SEC=60
 
-# Recommendations engine tuning
+# --- Recommendations engine tuning ---
 RECS_DEFAULT_TTL_DAYS=14
 RECS_MAX_RETURN=50
-
-# Frontend CORS origin (optional)
-REACT_APP_FRONTEND_URL=http://localhost:3000
