--- a/performance_monitor_backend/.env.example
+++ b/performance_monitor_backend/.env.example
@@ -22,6 +22,28 @@ CORS_ALLOW_ORIGINS=
 METRICS_SAMPLING_INTERVAL_SEC=5
 METRICS_RETENTION_DAYS=7
 
+# --- Metrics storage optimization (TTL + rollups) ---
+# TTL index for raw samples in perfmon.metrics_samples on field `ts` (Date).
+# 0 disables TTL (not recommended for production).
+# Range clamped to [60, 31536000] when non-zero.
+METRICS_RAW_TTL_SECONDS=604800
+
+# Enable background compaction/rollups into perfmon.metrics_rollups.
+METRICS_ROLLUP_ENABLED=false
+
+# Rollup bucket size (seconds). Typical: 60 (1m) or 300 (5m). Range clamped to [10, 3600].
+METRICS_ROLLUP_BUCKET_SECONDS=60
+
+# TTL index for rollups in perfmon.metrics_rollups on field `bucket` (Date). 0 disables TTL.
+METRICS_ROLLUP_TTL_SECONDS=2592000
+
+# How often the rollup job runs (seconds). Range clamped to [5, 3600].
+METRICS_ROLLUP_COMPACTION_INTERVAL_SEC=30
+
+# When a timeseries request spans >= this many seconds, the backend will prefer rollups (if enabled),
+# otherwise it reads raw samples. Range clamped to [60, 31536000].
+METRICS_ROLLUP_QUERY_THRESHOLD_SECONDS=21600
+
 # --- Alerts engine ---
 # How often to evaluate alert rules against stored samples.
 ALERT_EVAL_INTERVAL_SEC=5
